2001-06-10  Alex Samuel  <samuel@codesourcery.com>

	* share/diagnostics/track.txt: Alphabetize.

2001-06-10  Alex Samuel  <samuel@codesourcery.com>

	* qm/web.py (PageInfo.web): New attribute.
	* qm/common.py (Enumeral.__repr__): Fix typo.
	(Enumeral.__cmp__): Don't check strings against enumeration.
	* qm/track/web/summary.py (DisplayOptionsPageInfo.__init__): Check
	for no issue classes.
	(handle_summary): Handle all exceptions during queries.
	* qm/test/web/web.py (make_server): Register shutdown.
	(handle_shutdown): New function.
	* share/dtml/test/dir.dtml: Add shutdown button.
	* share/diagnostics/track.txt (query misc error): New diagonstic.
	(query name error): Likewise.
	(query syntax error): Likewise.

2001-06-10  Alex Samuel  <samuel@codesourcery.com>

	* qm/platform_linux.py (find_in_path): New function.
	(open_in_browser): Use it.
	(send_email): Use /usr/lib/sendmail as default.
	* doc/manual/common-manual.xml (sec-rc): New section.
	* doc/manual/test-reference.xml: Add link.
	* doc/manual/test-tour.xml: Likewise.

2001-06-10  Alex Samuel  <samuel@codesourcery.com>

	* configure.in (AC_CONFIG_SUBDIRS): Remove.
	* configure: Regenerate.
	
2001-06-08  Alex Samuel  <samuel@codesourcery.com>

	* qm/web.py (WebServer.__init__): Register /.
	(handle_root): New function.
	* share/web/static/index.html: New file.
	* qm.spec (%files): Revert.

2001-06-08  Alex Samuel  <samuel@codesourcery.com>

	* qm.spec (%files): Add /usr/local/share/web/static/*.

2001-06-08  Alex Samuel  <samuel@codesourcery.com>

	* qm/web.py (PageInfo.qm_bug_system_url): New variable.
	(PageInfo.GetMainPageUrl): New method.
	(PageInfo.GenerateEndBody): Add link to problems page.
	(WebServer.__init__): Register problems.html.
	(format_exception): Rewrite.
	(handle_problems): New function.
	* qm/track/web/web.py (PageInfo.GetMainPageUrl): New method.
	* qm/track/web/summary.py (SummaryPageInfo.__init__): Add
	open_only parameter.
	(DisplayOptionsPageInfo.__init__): Likewise.